// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reset password page reset password should render correctly 1`] = `
<Component
  description="Reset Password page of the Fares data build tool"
  errors={Array []}
  title="Reset Password - Fares data build tool"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <CsrfForm
        action="/api/resetPassword"
        csrfToken=""
        method="post"
      >
        <ErrorSummary
          errors={Array []}
        />
        <div
          className="govuk-form-group "
        >
          <div
            aria-describedby="resetPassword-page-heading"
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend govuk-fieldset__legend--l"
            >
              <h1
                className="govuk-fieldset__heading"
                id="resetPassword-type-page-heading"
              >
                Reset your password
              </h1>
            </legend>
            <p
              className="govuk-hint hint-text"
            >
              Your password should be at least 8 characters long.
            </p>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="password"
              >
                New password
              </label>
              <FormElementWrapper
                errorClass="govuk-input--error"
                errorId="password"
                errors={Array []}
              >
                <input
                  aria-describedby="password-hint"
                  className="govuk-input"
                  id="password"
                  name="password"
                  spellCheck="false"
                  type="password"
                />
              </FormElementWrapper>
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="confirm-password"
              >
                Confirm your new password
              </label>
              <input
                aria-describedby="confirmPassword-hint"
                className="govuk-input"
                id="confirm-password"
                name="confirmPassword"
                spellCheck="false"
                type="password"
              />
            </div>
          </div>
        </div>
        <input
          className="govuk-button"
          id="reset-password-button"
          name="resetPassword"
          type="submit"
          value="Reset Password"
        />
        <input
          name="regKey"
          type="hidden"
          value="123456"
        />
        <input
          name="username"
          type="hidden"
          value="test@tfn.com"
        />
        <input
          name="expiry"
          type="hidden"
          value="0"
        />
      </CsrfForm>
    </div>
  </div>
</Component>
`;

exports[`reset password page reset password should render error messaging when errors are passed 1`] = `
<Component
  description="Reset Password page of the Fares data build tool"
  errors={
    Array [
      Object {
        "errorMessage": "Passwords do not match",
        "id": "password",
      },
    ]
  }
  title="Reset Password - Fares data build tool"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <CsrfForm
        action="/api/resetPassword"
        csrfToken=""
        method="post"
      >
        <ErrorSummary
          errors={
            Array [
              Object {
                "errorMessage": "Passwords do not match",
                "id": "password",
              },
            ]
          }
        />
        <div
          className="govuk-form-group govuk-form-group--error"
        >
          <div
            aria-describedby="resetPassword-page-heading"
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend govuk-fieldset__legend--l"
            >
              <h1
                className="govuk-fieldset__heading"
                id="resetPassword-type-page-heading"
              >
                Reset your password
              </h1>
            </legend>
            <p
              className="govuk-hint hint-text"
            >
              Your password should be at least 8 characters long.
            </p>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="password"
              >
                New password
              </label>
              <FormElementWrapper
                errorClass="govuk-input--error"
                errorId="password"
                errors={
                  Array [
                    Object {
                      "errorMessage": "Passwords do not match",
                      "id": "password",
                    },
                  ]
                }
              >
                <input
                  aria-describedby="password-hint"
                  className="govuk-input"
                  id="password"
                  name="password"
                  spellCheck="false"
                  type="password"
                />
              </FormElementWrapper>
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="confirm-password"
              >
                Confirm your new password
              </label>
              <input
                aria-describedby="confirmPassword-hint"
                className="govuk-input"
                id="confirm-password"
                name="confirmPassword"
                spellCheck="false"
                type="password"
              />
            </div>
          </div>
        </div>
        <input
          className="govuk-button"
          id="reset-password-button"
          name="resetPassword"
          type="submit"
          value="Reset Password"
        />
        <input
          name="regKey"
          type="hidden"
          value="123456"
        />
        <input
          name="username"
          type="hidden"
          value="test@tfn.com"
        />
        <input
          name="expiry"
          type="hidden"
          value="0"
        />
      </CsrfForm>
    </div>
  </div>
</Component>
`;
